# translation-api

./: README.md  main.py  pyproject.toml
epub/: __init__.py  translator.py
pdf/: translator.py
translators/: __init__.py  epub.py  helper.py  pdf.py  translator.py
